welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:9: error: '(' expected but identifier found.
for retour <- 1 to nb {
    ^